# monumenta-automation

./: .dockerignore  .gitignore  .gitmodules  .vimrc  Cargo.toml  README.md  leaderboards.yaml
.github/workflows/: plugin_build_common.yml  plugin_pr_common.yml  plugin_publish_common.yml
.zed/: settings.json
discord_bots/automation_bot/: automation_bot.py  automation_bot_instance.py  automation_bot_lib.py  config.py  lib_k8s.py
discord_bots/bug_report_bot/: bug_report_bot.py  bug_report_manager.py
discord_bots/server_shell_bots/: bot.py  build.py  (+5 more)
docker/: Dockerfile  README.md  authorized_keys  automation-bot.Dockerfile  basic-ssh-dev.Dockerfile  basic-ssh.Dockerfile  docker_build_bot.sh  docker_build_bot_legacy.sh  docker_build_bot_play.sh  docker_build_bot_stage.sh  docker_build_bot_volt.sh  docker_build_java_shard.sh  docker_build_java_shard_25.sh  docker_build_jbr_java_shard.sh  docker_build_ssh.sh  ingress-config.yml  java-shard-17.Dockerfile  java-shard-21-jbr.Dockerfile  java-shard-21.Dockerfile  java-shard-25.Dockerfile  java-shard.Dockerfile  monumenta-25.sh  monumenta.sh  process.py.patch  warmroast.sh
heaptool/: Cargo.toml  rust-toolchain.toml
heaptool/src/: graph.rs  main.rs
mclevel/: README.md  materials.py  minecraft.yaml  nbt.py
rust/: Cargo.toml  build.sh  rust-toolchain.toml  rustfmt.toml  shell.nix
rust/src/: advancements.rs  lib.rs  lockout_lib.rs  player.rs  scoreboard.rs  world.rs
rust/src/hprof/: graph.rs  id.rs  mod.rs
src/: lib.rs  main.rs  scoreboard.rs
tests/: test_mojangson_parsing.py
utility_code/: ItemReplaceLib.py  Monumenta_Terrain_Reset.py  Monumenta_Terrain_Reset_config.py  SymMerge.sh  TerrainResetLib.py  add_mob_nbt_to_los.py  address_to_english.py  advancement_change_list.py  advancement_fixer.py  advancement_manipulate.py  advancement_rename_simple.py  analyze_items_in_world.py  area_adventure_prep.py  autoformat_cleanup_loot_tables_and_quests.py  await_heartbeat.py  benchmark_iteration.py  betaplots.py  build-server-entity-update.py  build-server-replace.py  bulk_entity_score_from_scoreboard.py  bulk_entity_score_to_scoreboard.py  bulk_update_loottables.py  bulk_update_loottables_from_world.py  chest_to_loot_table.py  chest_update_tool.py  command_block_update_tool.py  copy_region_tool.py  copy_server_config.py  copy_world.py  daily_restart.py  defragagment_world.py  defragment.py  defragment_world.py  diff_entities_region.py  diff_nbt.py  disable_broken_maps.py  disable_command_block_output.py  disable_command_block_output_lib.py  dump_loottable_items.py  dungeon_find_lootless.py  (+167 more)
(+671 files in other folders)
