[profile.release]
lto = "fat"
debug = "full"

[package]
name = "heaptool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
memmap2 = "0.9.9"
phf = { version = "0.13.1", features = ["macros"] }
smallvec = { version = "1.15.1", features = ["union"] }
