[package]
name = "monumenta"
version = "0.1.0"
authors = ["Byron Marohn <combustible@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
regex = "1"
lazy_static = "1"
simplelog = "0.7"
simple-error = "0.3"
log = "0.4"
hematite-nbt = { git = "https://github.com/PistonDevelopers/hematite_nbt" }
redis = "0.23"
serde_yaml = "0.9"
uuid = "0.8"
rayon = "1.7"
chrono = "0.4"
clap = { version = "4.2.5", features = ["derive"] }
