[package]
name = "monumenta"
version = "0.1.0"
authors = ["Byron Marohn <combustible@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.5"
serde_json = "1.0"
walkdir = "2.4"
regex = "1.10"
lazy_static = "1.4"
simplelog = "0.12"
log = "0.4"
hematite-nbt = "0.5"
redis = "0.24"
serde_yaml = "0.9"
uuid = "1.7"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
